--- a/package.json
+++ b/package.json
@@ -16,7 +16,17 @@
     "build-storybook": "storybook build"
   },
   "devDependencies": {
+    "@chromatic-com/storybook": "^1.9.0",
+    "@storybook/addon-essentials": "^8.3.6",
+    "@storybook/addon-interactions": "^8.3.6",
+    "@storybook/addon-links": "^8.3.6",
+    "@storybook/addon-svelte-csf": "^5.0.0-next.8",
+    "@storybook/blocks": "^8.3.6",
+    "@storybook/svelte": "^8.3.6",
+    "@storybook/sveltekit": "^8.3.6",
+    "@storybook/test": "^8.3.6",
     "@sveltejs/adapter-auto": "^3.0.0",
+    "@sveltejs/adapter-cloudflare": "^4.7.4",
     "@sveltejs/kit": "^2.0.0",
     "@sveltejs/vite-plugin-svelte": "^4.0.0",
     "@tailwindcss/aspect-ratio": "^0.4.2",
@@ -32,25 +42,20 @@
     "prettier": "^3.3.2",
     "prettier-plugin-svelte": "^3.2.6",
     "prettier-plugin-tailwindcss": "^0.6.5",
+    "storybook": "^8.3.6",
     "svelte": "^5.0.0",
     "svelte-check": "^4.0.0",
     "tailwindcss": "^3.4.9",
     "typescript": "^5.0.0",
     "typescript-eslint": "^8.0.0",
     "vite": "^5.0.3",
-    "vitest": "^2.0.4",
-    "storybook": "^8.3.6",
-    "@storybook/svelte": "^8.3.6",
-    "@storybook/sveltekit": "^8.3.6",
-    "@storybook/blocks": "^8.3.6",
-    "@storybook/addon-svelte-csf": "^5.0.0-next.8",
-    "@storybook/addon-links": "^8.3.6",
-    "@storybook/addon-essentials": "^8.3.6",
-    "@chromatic-com/storybook": "^1.9.0",
-    "@storybook/test": "^8.3.6",
-    "@storybook/addon-interactions": "^8.3.6"
+    "vitest": "^2.0.4"
   },
   "dependencies": {
-    "@inlang/paraglide-sveltekit": "^0.11.1"
+    "@fortawesome/free-brands-svg-icons": "^6.6.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@inlang/paraglide-sveltekit": "^0.11.1",
+    "svelte-fa": "^4.0.3",
+    "svelte-multiselect": "^11.0.0-rc.1"
   }
 }
