--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@inlang/paraglide-sveltekit": "^0.11.1",
     "svelte-fa": "^4.0.3",
-    "svelte-multiselect": "^11.0.0-rc.1"
+    "svelte-multiselect": "^11.0.0-rc.1",
+    "wrangler": "^3.83.0"
   }
 }
